--- a/src/app/admin/orders/components/quick-order/order-update-manager/order-update-manager.component.scss
+++ b/src/app/admin/orders/components/quick-order/order-update-manager/order-update-manager.component.scss
@@ -330,7 +330,7 @@
     max-height: calc(100vh - 247px);
     overflow-y: auto;
     .order_item_card {
-      display: flex;
+      display: block;
       background-color: transparent;
       box-shadow: none;
       border-radius: 0px;
@@ -341,122 +341,126 @@
         margin-bottom: 2rem;
       }
 
-
-      & .order-details {
-        padding: 10px;
-
-
-        @media (max-width: 1400px) {
+      .order_main_content {
+        display: flex;
+        & .order-details {
           padding: 10px;
-        }
 
-        & p.product_name {
-          margin: 0;
-          font-size: 20px;
-          font-weight: 500;
-          color: rgba(#000, 0.8);
-          margin-bottom: 10px;
-          display: flex;
-          align-items: center;
 
           @media (max-width: 1400px) {
-            font-size: 12px;
-            line-height: 14px;
-            margin-bottom: 5px;
+            padding: 10px;
           }
 
-          & .order_item_card_strip {
-            padding: 3px 7px;
-            background-color: rgba(255, 115, 0, 1);
-            font-size: 1.2rem;
-            line-height: 1;
-            color: #fff;
-            margin-left: 10px;
-            border-radius: 3px;
-          }
-        }
-
-        & p.product_price {
-          margin: 0;
-          display: flex;
-          font-size: 14px;
-          font-weight: 500;
-          line-height: 1.3;
-          color: #8e8e8e;
-
-          @media (max-width: 1400px) {
-            font-size: 12px;
-            &:first-child {
-
-              margin-bottom: 10px;
-            }
-          }
-
-          small {
-            margin-right: 5px;
-          }
-
-        }
-      }
-
-      & .action_menu {
-        padding: 10px 15px 10px 0px;
-        align-self: flex-end;
-
-        @media (max-width: 1400px) {
-          padding: 10px 10px 10px 0px;
-        }
-
-        .item_track_wrapper {
-          margin: 10px 0px 0;
-
-          @media (max-width: 1400px) {
-            margin-top: 10px;
-          }
-
-          & .item_track {
-            font-size: 12px;
-            line-height: 1;
-            padding: 3px 5px;
-            border-radius: 10px;
-            text-align: center;
-            min-width: 30px;
-            margin: 0 3px;
-            cursor: pointer;
-
+          & p.product_name {
+            margin: 0;
+            font-size: 20px;
+            font-weight: 500;
+            color: rgba(#000, 0.8);
+            margin-bottom: 10px;
+            display: flex;
+            align-items: center;
 
             @media (max-width: 1400px) {
-              font-size: 10px;
+              font-size: 12px;
+              line-height: 14px;
+              margin-bottom: 5px;
             }
 
-            &.served {
-              background-color: rgba($color-success, 0.1);
-              border: 1px solid rgba($color-success, 0.4);
-              color: $color-success;
+            & .order_item_card_strip {
+              padding: 3px 7px;
+              background-color: rgba(255, 115, 0, 1);
+              font-size: 1.2rem;
+              line-height: 1;
+              color: #fff;
+              margin-left: 10px;
+              border-radius: 3px;
+            }
+          }
+
+          & p.product_price {
+            margin: 0;
+            display: flex;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 1.3;
+            color: #8e8e8e;
+
+            @media (max-width: 1400px) {
+              font-size: 12px;
+              &:first-child {
+
+                margin-bottom: 10px;
+              }
             }
 
-            &.kitchen {
-              background-color: rgba($color-accent, 0.1);
-              border: 1px solid rgba($color-accent, 0.4);
-              color: $color-accent;
-            }
-
-            &.ready {
-              background-color: rgba($color-primary, 0.1);
-              border: 1px solid rgba($color-primary, 0.4);
-              color: $color-primary;
-            }
-
-            &.rejected {
-              background-color: rgba($color-warning, 0.1);
-              border: 1px solid rgba($color-warning, 0.4);
-              color: $color-warning;
+            small {
+              margin-right: 5px;
             }
 
           }
         }
 
+        & .action_menu {
+          padding: 10px 15px 10px 0px;
+          align-self: flex-end;
+
+          @media (max-width: 1400px) {
+            padding: 10px 10px 10px 0px;
+          }
+
+          .item_track_wrapper {
+            margin: 10px 0px 0;
+
+            @media (max-width: 1400px) {
+              margin-top: 10px;
+            }
+
+            & .item_track {
+              font-size: 12px;
+              line-height: 1;
+              padding: 3px 5px;
+              border-radius: 10px;
+              text-align: center;
+              min-width: 30px;
+              margin: 0 3px;
+              cursor: pointer;
+
+
+              @media (max-width: 1400px) {
+                font-size: 10px;
+              }
+
+              &.served {
+                background-color: rgba($color-success, 0.1);
+                border: 1px solid rgba($color-success, 0.4);
+                color: $color-success;
+              }
+
+              &.kitchen {
+                background-color: rgba($color-accent, 0.1);
+                border: 1px solid rgba($color-accent, 0.4);
+                color: $color-accent;
+              }
+
+              &.ready {
+                background-color: rgba($color-primary, 0.1);
+                border: 1px solid rgba($color-primary, 0.4);
+                color: $color-primary;
+              }
+
+              &.rejected {
+                background-color: rgba($color-warning, 0.1);
+                border: 1px solid rgba($color-warning, 0.4);
+                color: $color-warning;
+              }
+
+            }
+          }
+
+        }
       }
+
+
 
       .comment_item {
         width: 100%;
@@ -464,19 +468,37 @@
         line-height: 20px;
         color: #1c1b2a;
         position: relative;
+        padding: 5px 10px;
+        margin-bottom: 10px;
+        transition: .2s ease-in-out;
 
         & .close_btn {
           position: absolute;
-          top: 0;
-          right: 20px;
+          top: 5px;
+          right: 10px;
           width: 18px;
           height: 18px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           border-radius: 5px;
           background-color: #ffffff;
           padding: 3px;
+          transition: .2s ease-in-out;
+          box-shadow: 0px 0px 3px rgba(#000000, 0.2);
+          transform: translateX(50px) scale(0);
 
           & img {
             width: 100%;
+            flex: none;
+          }
+        }
+
+        &:hover {
+          background-color: rgba(#000000, 0.1);
+
+          & .close_btn {
+            transform: translateX(0px) scale(1);
           }
         }
       }
@@ -494,4 +516,5 @@
   width: 130px !important;
   border-color: #e2e2e2;
   border-radius: 5px;
+  margin-right: -11px !important;
 }
