--- a/src/app/admin/branch-profile/basic-profile/basic-profile.component.html
+++ b/src/app/admin/branch-profile/basic-profile/basic-profile.component.html
@@ -12,7 +12,7 @@
             <div class="col-auto pr-2">
               <mat-form-field appearance="fill" class="ew-150 mb-5">
                 <mat-label>Branch Code</mat-label>
-                <input type="text" readonly [ngModel]="branchData.branchCode" matInput>
+                <input type="text" readonly [ngModel]="branchData?.branchCode" matInput>
               </mat-form-field>
             </div>
             <div class="col">
