--- a/src/app/admin/branch-profile/app-guide/app-guide.component.html
+++ b/src/app/admin/branch-profile/app-guide/app-guide.component.html
@@ -58,6 +58,14 @@
                 </tr>
                 <tr>
                     <td>
+                        F10
+                    </td>
+                    <td>
+                        Complete
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         F11
                     </td>
                     <td>
