--- a/src/app/admin/report-manager/account-reports/profit-and-loss-report/profit-and-loss-report.component.html
+++ b/src/app/admin/report-manager/account-reports/profit-and-loss-report/profit-and-loss-report.component.html
@@ -145,8 +145,8 @@
                 <tr>
                     <th mat-sort-header="ledgerName">Account Name</th>
                     <th class="text-center">Status</th>
-                    <th class="text-right">Initial Balanace</th>
-                    <th class="text-right">Curret MonthTransaction</th>
+                    <th class="text-right">Initial Balance</th>
+                    <th class="text-right">Current MonthTransaction</th>
                     <th class="text-right">Ending Balance</th>
 <!--                    <th mat-sort-header="branchAddress" class="ew-250">Amount</th>-->
                 </tr>
