--- a/src/app/admin/orders/components/quick-order/order-update-manager/order-update-manager.component.scss
+++ b/src/app/admin/orders/components/quick-order/order-update-manager/order-update-manager.component.scss
@@ -125,6 +125,10 @@
               font-weight: 500;
               color: #1d2271;
             }
+
+            .mat-option-text {
+              display: inline-flex;
+            }
           }
 
           .customer_wrapper {
