--- a/src/app/admin/product-combo/product-combo-update/product-combo-update.component.html
+++ b/src/app/admin/product-combo/product-combo-update/product-combo-update.component.html
@@ -126,7 +126,9 @@
     <mat-slide-toggle formControlName="canPriceAltered" color="primary" class="mr-15 mb-15">Can Price altered at the
       time of order?
     </mat-slide-toggle>
-
+    <div>
+      <mat-slide-toggle formControlName="inclTax" color="primary" class="mr-15 mb-15">Is Price Inclusive of TAX? </mat-slide-toggle>
+    </div>
 
     <div class="button_wrapper">
       <button mat-raised-button color="primary" class="mr-20"
