--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -135,6 +135,10 @@
     <mat-slide-toggle formControlName="canPriceAltered" color="primary" class="mr-15 mb-15">Can Price altered at the
       time of order?
     </mat-slide-toggle>
+
+    <div>
+      <mat-slide-toggle formControlName="inclTax" color="primary" class="mr-15 mb-15">Is Price Inclusive of TAX? </mat-slide-toggle>
+    </div>
     <!-- <div class="d-flex align-items-center my-10">
     </div>
     <div class="d-flex align-items-center my-10">
